[gd_scene load_steps=3 format=3 uid="uid://dsji6gqhrw8wy"]

[ext_resource type="Script" uid="uid://dtudfg7ikidru" path="res://core/wood/wood_manager.gd" id="1_7qo2e"]
[ext_resource type="PackedScene" uid="uid://6b8wf8s1nsx" path="res://core/wood/wood.tscn" id="2_jown2"]

[node name="WoodManager" type="Node2D"]
script = ExtResource("1_7qo2e")
wood = ExtResource("2_jown2")

[node name="WoodMarker" type="Marker2D" parent="."]
position = Vector2(480, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
